<resources>
    <string name="app_name">Exercicio01</string>
	<string name="drawer_open">Abrir</string>
    <string name="drawer_close">Fechar</string>
 
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Amigos</string>
    <string name="nav_item_notifications">Mensagens</string>
 
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
 
    <string name="title_messages">Mensagens</string>
    <string name="title_friends">Amigos</string>
    <string name="title_home">Home</string>
    <string name="action_settings_label">Settings</string>
    <string name="action_search_label">Search</string>
    <string name="action_friends_label">Friends</string>
    <string name="action_messages_label">Messages</string>
    <string name="action_content_label">Content</string>
</resources>
