<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/ic_action_messages"
        android:orderInCategory="100"
        android:title="@string/action_messages_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_friends"
        android:icon="@drawable/ic_action_friends"
        android:orderInCategory="100"
        android:title="@string/action_friends_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_content"
        android:icon="@drawable/ic_action_content"
        android:orderInCategory="100"
        android:title="@string/action_content_label"
        app:showAsAction="ifRoom" />
</menu>